[tool.isort]
profile = "black"
line_length = 99
py_version = 38
known_third_party = [
    "cachetools",
    "colorama",
    "coloredlogs",
    "environ",
    "ffmpeg",
    "jaraco.docker",
    "packaging",
    "pathos",
    "peewee",
    "ping3",
    "pyarr",
    "qbittorrentapi",
    "requests",
    "tomlkit",
    "ujson",
]
known_local_folder = ["qBitrr"]

[tool.black]
line-length = 99
target-version = ['py38']

[tool.poetry]
name = "pypi-public"
version = "4.5.10"
description = "A simple script to monitor qBit and communicate with Radarr and Sonarr"
authors = ["Drapersniper", "Feramance"]
readme = "README.md"
repository = "https://github.com/Feramance/qBitrr"
url = "https://pypi.org/simple/"

[tool.autopep8]
max_line_length = 99
ignore = "E712"
in-place = true
recursive = true
aggressive = 3
