[tool.isort]
profile = "black"
line_length = 99
py_version = 311
known_third_party = [
    "cachetools",
    "colorama",
    "coloredlogs",
    "environ",
    "ffmpeg",
    "jaraco.docker",
    "packaging",
    "pathos",
    "peewee",
    "ping3",
    "pyarr",
    "qbittorrentapi",
    "requests",
    "tomlkit",
    "ujson",
    "waitress",
]
known_local_folder = ["qBitrr"]

[tool.black]
line-length = 99
target-version = ['py311']

[tool.poetry]
name = "pypi-public"
version = "5.6.2"
description = "Intelligent automation for qBittorrent and *Arr apps (Radarr/Sonarr/Lidarr) - health monitoring, instant imports, quality upgrades, request integration"
authors = ["Drapersniper", "Feramance"]
readme = "README.md"
repository = "https://github.com/Feramance/qBitrr"
documentation = "https://github.com/Feramance/qBitrr/blob/master/API_DOCUMENTATION.md"
homepage = "https://github.com/Feramance/qBitrr"
url = "https://pypi.org/simple/"
keywords = ["qbittorrent", "radarr", "sonarr", "lidarr", "arr", "automation", "torrent", "media", "plex", "jellyfin"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.autopep8]
max_line_length = 99
ignore = "E712"
in-place = true
recursive = true
aggressive = 3
