[metadata]
name = qBitrr2
version = 4.5.1
description = "A simple Python script to talk to qBittorrent and Arr's"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Feramance/qBitrr
author = Feramance
author_email = fera@fera.wtf
license = MIT
license_files =
    LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Terminals
    Topic :: Utilities
    Typing :: Typed
description_file = README.md
project_urls =
    Issue Tracker = https://github.com/Feramance/qBitrr/issues
    Source Code = https://github.com/Feramance/qBitrr

[options]
packages = find_namespace:
install_requires =
    cachetools==5.3.2
    colorama==0.4.4
    coloredlogs==15.0.1
    environ-config==23.2.0
    ffmpeg-python==0.2.0
    jaraco.docker==2.0
    packaging==22.0
    pathos==0.2.8
    peewee==3.14.7
    ping3==3.0.2
    pyarr==5.2.0
    qbittorrent-api==2023.7.52
    requests==2.31.0
    tomlkit==0.7.2
python_requires = >=3.8.3,<4
include_package_data = True

[options.packages.find]
include =
    qBitrr
    config.example.toml

[options.entry_points]
console_scripts =
    qbitrr=qBitrr.main:run

[options.extras_require]
dev =
    black==24.3.0
    bump2version==1.0.1
    isort==5.10.1
    pip-tools==7.3.0
    pre-commit==3.3.3
    pyinstaller==5.13.1
    pyupgrade==2.31.0
    twine==3.7.1
    ujson==5.4.0
    upgrade-pip==0.1.4
fast =
    ujson==5.4.0
all =
    %(dev)s
    %(fast)s
