[metadata]
name = qBitrr2
version = 5.6.2
description = Intelligent automation for qBittorrent and *Arr apps (Radarr/Sonarr/Lidarr) - health monitoring, instant imports, quality upgrades, request integration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Feramance/qBitrr
author = Feramance
author_email = fera@fera.wtf
license = MIT
license_files =
    LICENSE
keywords =
    qbittorrent
    radarr
    sonarr
    lidarr
    arr
    automation
    torrent
    media
    plex
    jellyfin
    overseerr
    ombi
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Communications
    Topic :: Internet
    Topic :: Multimedia :: Video
    Topic :: System :: Monitoring
    Topic :: Terminals
    Topic :: Utilities
    Typing :: Typed
description_file = README.md
project_urls =
    Homepage = https://github.com/Feramance/qBitrr
    Documentation = https://feramance.github.io/qBitrr/
    Issue Tracker = https://github.com/Feramance/qBitrr/issues
    Source Code = https://github.com/Feramance/qBitrr
    Changelog = https://github.com/Feramance/qBitrr/blob/master/CHANGELOG.md
    Docker Hub = https://hub.docker.com/r/feramance/qbitrr
    PyPI = https://pypi.org/project/qBitrr2/
    Systemd Guide = https://feramance.github.io/qBitrr/getting-started/installation/systemd/

[options]
packages = find_namespace:
install_requires =
    cachetools
    colorama
    coloredlogs
    flask
    environ-config
    ffmpeg-python
    jaraco.docker
    packaging
    pathos
    peewee
    ping3
    pyarr
    qbittorrent-api
    requests
    tomlkit
    waitress
    croniter
python_requires = >=3.11,<4
include_package_data = True

[options.packages.find]
include =
    qBitrr
    config.example.toml

[options.package_data]
qBitrr =
    static/*.*
    static/*/*.*

[options.entry_points]
console_scripts =
    qbitrr=qBitrr.main:run

[options.extras_require]
dev =
    black==24.3.0
    bump2version==1.0.1
    isort==5.10.1
    pip-tools==7.3.0
    pre-commit==3.3.3
    pyinstaller==5.13.1
    pyupgrade==2.31.0
    twine==3.7.1
    ujson==5.10.0
    upgrade-pip==0.1.4
fast =
    ujson==5.10.0
docs =
    mkdocs>=1.5.3
    mkdocs-material>=9.5.0
    mkdocs-material-extensions>=1.3.0
    mkdocs-git-revision-date-localized-plugin>=1.2.0
    mkdocs-minify-plugin>=0.7.0
    mkdocs-redirects>=1.2.0
    mkdocs-include-markdown-plugin>=6.0.0
    pymdown-extensions>=10.0.0
    markdown-include>=0.8.0
all =
    %(dev)s
    %(fast)s
    %(docs)s
